# CPP-Chess-Engine

./: CMakeLists.txt  LICENSE  README.md  board.h  move.cpp  move.h  utils.h
include/: bitboard_math.hpp  bitboard_utils.h  board.h  board.hpp  book.hpp  eval.hpp  globals.hpp  misc.hpp  move_gen.hpp  search.hpp  tests.h  tests.hpp  transposition.hpp  uci.hpp  utils.h  utils.hpp
src/: board.cpp  book.cpp  eval.cpp  main.cpp  search.cpp  tests.cpp  transposition.cpp  uci.cpp  utils.cpp  zobrist.cpp
tests/: tests.h
